# prometheus-alert-model-for-python

./: .flake8  .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: codeql-analysis.yml  commit.yml  release.yml
docs/: index.html  main.html  utils.html
prometheus_alert_model/: __init__.py  main.py  utils.py
tests/: conftest.py  test_add.py  test_add_prefix.py  test_alert_group_model.py  test_alert_model.py  test_markers.py  test_override.py  test_remove.py  test_remove_re.py  test_update_common.py  test_update_specific.py  test_utils.py
tests/data/: payload-simple-01.json
